# fake-media-server

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  configure  main.cpp
.github/workflows/: cmake.yml
common/: CMakeLists.txt
common/adapter/: echo.cpp  echo.h
common/net/: adapter.cpp  adapter.h  event.cpp  event.h  io_loop.cpp  io_loop.h  ioloop.cpp  ioloop.h  socket_util.cpp  socket_util.h  tcp.cpp  tcp.h
common/util/: define.h  io_buffer.cpp  io_buffer.h  log.h
conf/: fake.conf
include/: event.h
protocol/: CMakeLists.txt
protocol/libamf/: CMakeLists.txt
protocol/libamf/include/: amf0.h  amf3.h  amf_item.h  amf_util.h
protocol/libamf/src/: amf0.c  amf3.c  amf_util.c
protocol/libamf/test/: amf0_test.cpp  amf3_test.cpp
protocol/libecho/: CMakeLists.txt
protocol/libecho/include/: echo.h  echo_client.h  echo_internal.h  echo_server.h
protocol/libecho/src/: echo.c  echo_client.c  echo_server.c
protocol/libecho/test/: client.c  echo_test.c  echo_test.h  echo_test_client.c
protocol/libflv/: CMakeLists.txt
protocol/libflv/include/: flv.h  flv_demuxer.h  flv_header.h  flv_muxer.h  flv_reader.h  flv_type.h  flv_writer.h  mpeg4_aac.h  mpeg4_avc.h
protocol/libflv/src/: flv_demuxer.c  flv_header.c  flv_muxer.c  flv_reader.c  flv_writer.c  mpeg4_aac.c  mpeg4_avc.c
protocol/libflv/test/: flv_test_demux.cpp
protocol/librtmp/: CMakeLists.txt
protocol/librtmp/include/: rtmp.h  rtmp_chunk.h  rtmp_handshake.h  rtmp_packet.h  rtmp_util.h
protocol/librtmp/src/: handshake.cpp  rtmp.c  rtmp_chunk.c  rtmp_handshake.c  rtmp_util.c
protocol/librtmp/test/: rtmp_test.h  rtmp_test_handshake.c  test_rtmp_handshake.c
scripts/: Dockerfile  Dockerfile.debian  Dockerfile.ubuntu  build_debug_container.sh  build_server.sh  env_prepare
source/: CMakeLists.txt  conf.cpp  conf.h  core.h  event.cpp  event.h  fake-media-server.cpp  fake_media_server.cpp  fake_media_server.h  ioloop.cpp  ioloop.h  log.h  server.cpp  server.h  worker.cpp  worker.h
source/common/: event.cpp  event.h  ioloop.cpp  ioloop.h  log.h  process.h
source/util/: buffer.cpp  buffer.h  config.cpp  config.h  process.cpp  process.h
src/: CMakeLists.txt
test/: CMakeLists.txt  test_server.cpp
test/common/: CMakeLists.txt  test_config.cpp  test_log.hpp  test_main.cpp
test/util/: CMakeLists.txt  test_config.cpp  test_log.cpp
