CMAKE_MINIMUM_REQUIRED(VERSION 3.13)

SET(CMAKE_CXX_STANDARD 20)

PROJECT(fake-media-server)

STRING(LENGTH "${CMAKE_SOURCE_DIR}/" SOURCE_PATH_SIZE)
ADD_DEFINITIONS("-DSOURCE_PATH_SIZE=${SOURCE_PATH_SIZE}")

SET(CMAKE_INSTALL_PREFIX ${PROJECT_SOURCE_DIR})

# Build test
ADD_SUBDIRECTORY(test/util)

# Build media object
ADD_SUBDIRECTORY(source)

# Build protocol library
ADD_SUBDIRECTORY(protocol)

# Build Fake Media Server
INCLUDE_DIRECTORIES(source)
ADD_EXECUTABLE(fake-media-server $<TARGET_OBJECTS:FMEDIA> fake-media-server.cpp)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} LIBECHO LIBRTMP)

INSTALL(TARGETS ${PROJECT_NAME} DESTINATION ${CMAKE_INSTALL_PREFIX}/bin)
