CMAKE_MINIMUM_REQUIRED(VERSION 3.13)

SET(CMAKE_CXX_STANDARD 20)

PROJECT(fake-media-server)

OPTION(FMS_DEBUG "build debug executable" OFF)

STRING(LENGTH "${CMAKE_SOURCE_DIR}/" SOURCE_PATH_SIZE)
ADD_DEFINITIONS("-DSOURCE_PATH_SIZE=${SOURCE_PATH_SIZE}")
IF("${CMAKE_BUILD_TYPE}" STREQUAL "Debug")
    SET(FMS_DEBUG ON)
    ADD_DEFINITIONS("-DDEBUG=1")
ENDIF()

IF (CMAKE_SYSTEM_NAME MATCHES "Linux")
    MESSAGE(STATUS "current platform: Linux")
    SET(IS_LINUX ON)
ELSEIF (CMAKE_SYSTEM_NAME MATCHES "Windows")
    MESSAGE(STATUS "current platform: Windows")
    SET(IS_WIN ON)
    ADD_COMPILE_OPTIONS(/wd4996)
ENDIF()

# Set install prefix
SET(CMAKE_INSTALL_PREFIX ${PROJECT_SOURCE_DIR})

# Build common object
ADD_SUBDIRECTORY(common)

# Build test
ADD_SUBDIRECTORY(test)

# Build protocol library
ADD_SUBDIRECTORY(protocol)

# Build Fake Media Server
INCLUDE_DIRECTORIES(common protocol)
AUX_SOURCE_DIRECTORY(source SOURCE_FILES)
ADD_EXECUTABLE(${PROJECT_NAME} ${SOURCE_FILES} $<TARGET_OBJECTS:FCOMMON>)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} LIBECHO LIBRTMP)

INSTALL(TARGETS ${PROJECT_NAME} DESTINATION ${CMAKE_INSTALL_PREFIX}/bin)
