PROJECT(fmedia)

AUX_SOURCE_DIRECTORY(. SOURCE_FILES)

INCLUDE_DIRECTORIES(${CMAKE_HOME_DIRECTORY}/include)

ADD_LIBRARY(FMEDIA_SHARED SHARED ${SOURCE_FILES})
SET_TARGET_PROPERTIES(FMEDIA_SHARED PROPERTIES OUTPUT_NAME ${PROJECT_NAME})

ADD_LIBRARY(FMEDIA_STATIC STATIC ${SOURCE_FILES})
SET_TARGET_PROPERTIES(FMEDIA_STATIC PROPERTIES OUTPUT_NAME ${PROJECT_NAME})

INSTALL(TARGETS FMEDIA_STATIC FMEDIA_SHARED
        LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
        ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR})

INSTALL(FILES ${PUBLIC_HEADER} DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
