PROJECT(fmedia)

SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)

AUX_SOURCE_DIRECTORY(. SOURCE_FILES)

ADD_LIBRARY(FMEDIA_SHARED SHARED ${SOURCE_FILES} worker.cpp worker.h conf.cpp conf.h fake_media_server.cpp fake_media_server.h log.h)
SET_TARGET_PROPERTIES(FMEDIA_SHARED PROPERTIES OUTPUT_NAME ${PROJECT_NAME})

ADD_LIBRARY(FMEDIA_STATIC STATIC ${SOURCE_FILES})
SET_TARGET_PROPERTIES(FMEDIA_STATIC PROPERTIES OUTPUT_NAME ${PROJECT_NAME})

INSTALL(TARGETS FMEDIA_STATIC FMEDIA_SHARED
        LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
        ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR})

INSTALL(FILES ${PUBLIC_HEADER} DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
