PROJECT(fmedia)

AUX_SOURCE_DIRECTORY(. SOURCE_FILES)

ADD_LIBRARY(FMEDIA_SHARED SHARED ${SOURCE_FILES})
SET_TARGET_PROPERTIES(FMEDIA_SHARED PROPERTIES OUTPUT_NAME ${PROJECT_NAME})

ADD_LIBRARY(FMEDIA_STATIC STATIC ${SOURCE_FILES})
SET_TARGET_PROPERTIES(FMEDIA_STATIC PROPERTIES OUTPUT_NAME ${PROJECT_NAME})

INSTALL(TARGETS FMEDIA_STATIC FMEDIA_SHARED
        LIBRARY DESTINATION ${CMAKE_HOME_DIRECTORY}/lib
        ARCHIVE DESTINATION ${CMAKE_HOME_DIRECTORY}/lib)
