ADD_SUBDIRECTORY(common)

INCLUDE_DIRECTORIES(${CMAKE_HOME_DIRECTORY}/source)

SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/test)

AUX_SOURCE_DIRECTORY(. TEST_SOURCE_FILES)

FOREACH(TEST_FILE ${TEST_SOURCE_FILES})
    GET_FILENAME_COMPONENT(TEST_BIN ${TEST_FILE} NAME_WE)
    ADD_EXECUTABLE(${TEST_BIN} ${TEST_FILE})
    TARGET_LINK_LIBRARIES(${TEST_BIN} FMEDIA_SHARED)
    ADD_TEST(NAME ${TEST_BIN} COMMAND ${TEST_BIN})
ENDFOREACH()