CMAKE_MINIMUM_REQUIRED(VERSION 3.13)

PROJECT(amf)

FILE(GLOB include/*.h HEADERS)

INCLUDE_DIRECTORIES(include)

# Build libamf
AUX_SOURCE_DIRECTORY(src SOURCE_FILES)

ADD_LIBRARY(LIBAMF STATIC ${SOURCE_FILES})
SET_TARGET_PROPERTIES(LIBAMF PROPERTIES OUTPUT_NAME ${PROJECT_NAME})

ADD_LIBRARY(LIBAMF_SHARED SHARED ${SOURCE_FILES})
SET_TARGET_PROPERTIES(LIBAMF_SHARED PROPERTIES OUTPUT_NAME ${PROJECT_NAME})

# Build test
AUX_SOURCE_DIRECTORY(test TEST_SOURCE_FILES)

FOREACH(TEST_FILE ${TEST_SOURCE_FILES})
    GET_FILENAME_COMPONENT(TEST_BIN ${TEST_FILE} NAME_WE)

    ADD_EXECUTABLE(${TEST_BIN} ${TEST_FILE})
    TARGET_LINK_LIBRARIES(${TEST_BIN} LIBAMF)

    INSTALL(TARGETS ${TEST_BIN} DESTINATION ${PROJECT_SOURCE_DIR}/bin)
    ADD_TEST(NAME ${TEST_BIN} COMMAND ${TEST_BIN})
ENDFOREACH()

# Install library and binary
INSTALL(TARGETS LIBAMF LIBAMF_SHARED
        ARCHIVE DESTINATION ${CMAKE_INSTALL_PREFIX}/lib
        LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX}/lib)

INSTALL(FILES ${HEADERS} DESTINATION ${CMAKE_INSTALL_PREFIX}/libamf/include)
