PROJECT(echo)

FILE(GLOB include/*.h HEADERS)

AUX_SOURCE_DIRECTORY(src SOURCE_FILES)

ADD_LIBRARY(LIBECHO STATIC ${SOURCE_FILES})
SET_TARGET_PROPERTIES(LIBECHO PROPERTIES OUTPUT_NAME ${PROJECT_NAME})

ADD_LIBRARY(LIBECHO_SHARED SHARED ${SOURCE_FILES})
SET_TARGET_PROPERTIES(LIBECHO_SHARED PROPERTIES OUTPUT_NAME ${PROJECT_NAME})

INSTALL(TARGETS LIBECHO LIBECHO_SHARED
        ARCHIVE DESTINATION ${CMAKE_INSTALL_PREFIX}/lib
        LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX}/lib)

INSTALL(FILES ${HEADERS} DESTINATION ${CMAKE_INSTALL_PREFIX}/libecho/include)