PROJECT(echo)

FILE(GLOB include/*.h HEADERS)

INCLUDE_DIRECTORIES(include)

# Build libecho
AUX_SOURCE_DIRECTORY(src SOURCE_FILES)

ADD_LIBRARY(LIBECHO STATIC ${SOURCE_FILES})
SET_TARGET_PROPERTIES(LIBECHO PROPERTIES OUTPUT_NAME ${PROJECT_NAME})

ADD_LIBRARY(LIBECHO_SHARED SHARED ${SOURCE_FILES})
SET_TARGET_PROPERTIES(LIBECHO_SHARED PROPERTIES OUTPUT_NAME ${PROJECT_NAME})

# Build test
AUX_SOURCE_DIRECTORY(test TEST_SOURCE_FILES)

FOREACH(TEST_FILE ${TEST_SOURCE_FILES})
    GET_FILENAME_COMPONENT(TEST_BIN ${TEST_FILE} NAME_WE)

    ADD_EXECUTABLE(${TEST_BIN} ${TEST_FILE})
    TARGET_LINK_LIBRARIES(${TEST_BIN} LIBECHO)

    INSTALL(TARGETS ${TEST_BIN} DESTINATION ${PROJECT_SOURCE_DIR}/bin)
    ADD_TEST(NAME ${TEST_BIN} COMMAND ${TEST_BIN})
ENDFOREACH()

# Install library and binary
INSTALL(TARGETS LIBECHO LIBECHO_SHARED
        ARCHIVE DESTINATION ${CMAKE_INSTALL_PREFIX}/lib
        LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX}/lib)

INSTALL(FILES ${HEADERS} DESTINATION ${CMAKE_INSTALL_PREFIX}/libecho/include)
