PROJECT(librtmp)

CMAKE_MINIMUM_REQUIRED(VERSION 3.13)
SET(CMAKE_MACOSX_RPATH 0)

FILE(GLOB include/*.h HEADERS)

INCLUDE_DIRECTORIES(include)
AUX_SOURCE_DIRECTORY(src SOURCE_FILES)

ADD_LIBRARY(LIBRTMP STATIC ${SOURCE_FILES})
SET_TARGET_PROPERTIES(LIBRTMP PROPERTIES OUTPUT_NAME ${PROJECT_NAME})

ADD_LIBRARY(LIBRTMP_SHARED SHARED ${SOURCE_FILES})
SET_TARGET_PROPERTIES(LIBRTMP_SHARED PROPERTIES OUTPUT_NAME ${PROJECT_NAME})

INSTALL(TARGETS LIBRTMP LIBRTMP_SHARED
        ARCHIVE DESTINATION ${CMAKE_INSTALL_PREFIX}/lib
        LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX}/lib)

INSTALL(FILES ${HEADERS} DESTINATION ${CMAKE_INSTALL_PREFIX}/librtmp/include)