PROJECT(echo)

FILE(GLOB include/*.h HEADERS)

INCLUDE_DIRECTORIES(include)

# Build librtmp
AUX_SOURCE_DIRECTORY(src SOURCE_FILES)

ADD_LIBRARY(LIBRTMP STATIC ${SOURCE_FILES})
SET_TARGET_PROPERTIES(LIBRTMP PROPERTIES OUTPUT_NAME ${PROJECT_NAME})

ADD_LIBRARY(LIBRTMP_SHARED SHARED ${SOURCE_FILES})
SET_TARGET_PROPERTIES(LIBRTMP_SHARED PROPERTIES OUTPUT_NAME ${PROJECT_NAME})

# Build test
AUX_SOURCE_DIRECTORY(test TEST_SOURCE_FILES)

FOREACH(TEST_FILE ${TEST_SOURCE_FILES})
    GET_FILENAME_COMPONENT(TEST_BIN ${TEST_FILE} NAME_WE)

    ADD_EXECUTABLE(${TEST_BIN} ${TEST_FILE})
    TARGET_LINK_LIBRARIES(${TEST_BIN} LIBRTMP)

    INSTALL(TARGETS ${TEST_BIN} DESTINATION ${PROJECT_SOURCE_DIR}/bin)
    ADD_TEST(NAME ${TEST_BIN} COMMAND ${TEST_BIN})
ENDFOREACH()

# Install library and binary
INSTALL(TARGETS LIBRTMP LIBRTMP_SHARED
        ARCHIVE DESTINATION ${CMAKE_INSTALL_PREFIX}/lib
        LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX}/lib)

INSTALL(FILES ${HEADERS} DESTINATION ${CMAKE_INSTALL_PREFIX}/librtmp/include)
