INCLUDE_DIRECTORIES(${CMAKE_HOME_DIRECTORY}/source)

AUX_SOURCE_DIRECTORY(. TEST_SOURCE_FILES)

FOREACH(TEST_FILE ${TEST_SOURCE_FILES})
    GET_FILENAME_COMPONENT(TEST_BIN ${TEST_FILE} NAME_WE)

    ADD_EXECUTABLE(${TEST_BIN} ${TEST_FILE} $<TARGET_OBJECTS:FUTIL>)
    TARGET_LINK_LIBRARIES(${TEST_BIN})

    INSTALL(TARGETS ${TEST_BIN} DESTINATION ${CMAKE_INSTALL_PREFIX}/bin/test/util)
#    ADD_TEST(NAME ${TEST_BIN} COMMAND ${TEST_BIN})
ENDFOREACH()
